<!--?xml version="1.0"?--> 
<package>
  <name>robosherlock_msgs</name>
  <description> ROS interface definitions of the RoboSherlock perception framework
  </description>
  <version>0.0.1</version>
  <author email="balintbe@cs.uni-bremen.de"> Ferenc Balint-Benczedi </author>
  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
 
 <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>shape_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>


</package>
