<?xml version="1.0"?>
<package format="2">
  <name>uimacpp_ros</name>
  <version>2.4.1</version>
  <description>
  This package is a ROS wrapper of APACHE UIMACPP.
  </description>
  <maintainer email="lshixin@ucsd.edu">Shixin Li</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--system deps-->
  <depend>xerces</depend>
  <depend>libicu-dev</depend>
  <depend>apr</depend>
  <depend>java</depend>
</package>
